--- a/frontend_ecommerce/src/index.css
+++ b/frontend_ecommerce/src/index.css
@@ -4,6 +4,15 @@ main{
 h3{
     padding: 1rem;
 }
+h1{
+    font-size: 1.8rem;
+    padding:1rem 0;
+    text-align: center;
+}
+h2{
+    font-size: 1.4rem;
+    padding:0.5rem 0;
+}
 .rating span{
     margin: 0.1 rem;
 }
